menu mockup. Begin to build Menu class

--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
-    <!-- <script src="https://kit.fontawesome.com/0033d354dd.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://d3js.org/d3.v5.js"></script> -->
+    <link rel="stylesheet" type="text/css" href="menu-style.css">
+    <script src="menu.js"></script>
 </head>
 <body>
-<div class="page-area">
-    <div class="content-area">
-
+<div class="menu-area">
+    <div class="menu-container">
+        <h1 class="menu-title">Menu</h1>
+        <ul class="menu-items">
+            <li class="menu-item">Start Game</li>
+            <li class="menu-item">Level Select</li>
+            <li class="menu-item">About</li>
+            <li class="menu-item">Settings</li>
+        </ul>
     </div>
 </div>
 </body>
