--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script>
         let menu = new Menu({
             container: '.menu-container',
-            title: 'Example Title',
+            title: 'Menu',
             items: [
                 {
                     name: "Start Game",
